# solana-training

./: .gitignore  README.md
program/: Cargo.toml
program/src/: lib.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte
